infrastructure/temporal/ui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: temporal-ui
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: temporal-ui
  template:
    metadata:
      labels:
        app: temporal-ui
    spec:
      enableServiceLinks: false
      containers:
        - name: temporal-ui
          image: temporalio/ui:latest
          ports:
            - containerPort: 8080
         resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "100m"
