infrastructure/temporal/ui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: temporal-ui
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: default-temporal-ui-auth@kubernetescrd
spec:
  rules:
    - host: temporal.aashutoshparajuli.com.np
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: temporal-ui
                port:
                  number: 8080
